--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,3 +40,20 @@ iframe#tela{
     width: 268px;
     height: 471px;
 }
+section#rede-social{
+    text-align: right;
+}
+section#rede-social img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box; /*ESSA CONSFIGURAÇÃO TORNA A BORDA QUE CRIAMOS ABAIXO PARTE DA CAIXA, PARA QUNADO PASSARMOS O MOUSE EM CIMA DA IMAGEM, AS DEMAIS NÃO SE MEXEREM*/
+}
+
+section#rede-social img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.600);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.600);
+    transition: transform 0.3s border 1s;
+}
